--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Compiled webassembly of bitcoin secp256k1",
   "main": "index.js",
   "dependencies": {
+    "buffer": "^5.4.3",
+    "cross-env": "^6.0.3",
     "is-buffer": "^2.0.3",
     "wasm-loader": "^1.3.0"
   },
@@ -15,13 +17,12 @@
     "jest-runner-mocha": "^0.6.0",
     "secp256k1": "^3.7.1",
     "selenium-webdriver": "^4.0.0-alpha.5",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   },
   "scripts": {
-    "build": "webpack",
-    "test": "jest --config ./jest.config.js --detectOpenHandles"
+    "build": "cross-env NODE_ENV=production webpack .",
+    "test": "NODE_V8_COVERAGE=./coverage jest --config ./jest.config.js --detectOpenHandles"
   },
   "repository": {
     "type": "git",
