--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "index.js",
   "dependencies": {
     "buffer": "^5.4.3",
-    "cross-env": "^6.0.3",
-    "is-buffer": "^2.0.3",
-    "wasm-loader": "^1.3.0"
+    "is-buffer": "^2.0.3"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "exports-loader": "^0.7.0",
     "file-loader": "^3.0.1",
     "geckodriver": "^1.19.0",
@@ -17,6 +16,7 @@
     "jest-runner-mocha": "^0.6.0",
     "secp256k1": "^3.7.1",
     "selenium-webdriver": "^4.0.0-alpha.5",
+    "wasm-loader": "^1.3.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   },
